Remove unused parameter